--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.18.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.5.0",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
