--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "employees",
+  "name": "HRDesk",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1"
+    "enzyme-adapter-react-16": "^1.12.1",
+    "redux-mock-store": "^1.5.3"
   }
 }
